README and cleanup API in NAMESPACE

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: sinodate
 Title: S4 class to represent date in Chinese calendar (Mandarin: Nongli, Cantonese: Nung Lik)
 Version: 0.1
 Authors@R: "Chung-hong Chan <Chung-hong Chan> [aut, cre]"
-Description: S4 class to represent date in Chinese calendar. Also provided functions for conversion between Georgian calendar and sinodate.
+Description: S4 class to represent date in Chinese calendar. Also provided functions for conversion between Gregorian date and sinodate.
 Depends: R (>= 3.0.0)
 Imports: lubridate
 License: MIT
