--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: sinodate
 Title: S4 class to represent date in Chinese calendar (Mandarin: Nongli, Cantonese: Nung Lik)
 Version: 0.1
-Authors@R: "Chung-hong Chan <Chung-hong Chan> [aut, cre]"
+Authors@R: "Chung-hong Chan <chainsawtiney@gmail.com> [aut, cre]"
 Description: S4 class to represent date in Chinese calendar. Also provided functions for conversion between Gregorian date and sinodate.
 Depends: R (>= 3.0.0)
 Imports: lubridate
 License: MIT
 LazyData: true
+Suggests: testthat
